Update 'f38zi92mr-python' component image to: quay.io/rhtap_qe/rhtap-qe:fd5e346cc17a397d2ddd16b80800248b24a17deb@sha256:2d709095f020f88fe4987dbb6897df75a734e4f810d805458b2174f6b36b759c

--- a/components/f38zi92mr-python/overlays/development/deployment-patch.yaml
+++ b/components/f38zi92mr-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f38zi92mr-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:fd5e346cc17a397d2ddd16b80800248b24a17deb@sha256:2d709095f020f88fe4987dbb6897df75a734e4f810d805458b2174f6b36b759c
+          name: container-image
